# glviz

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  example.cpp
glviz/: CMakeLists.txt
glviz/src/: buffer.cpp  camera.cpp  camera.hpp  glviz.cpp  glviz.hpp  program.cpp  program.hpp  shader.cpp
glviz/src/shader/: mesh3_gs.glsl  mesh3_vs.glsl  sphere_fs.glsl  sphere_vs.glsl
